tests/lean/mutualdef1.lean.expected.out
mutualdef1.lean:10:0: error: invalid mutually recursive definitions, type mismatch at parameter 'x'
  Bool
expected type
  Nat
mutualdef1.lean:22:0: error: invalid mutually recursive definitions, parameter name mismatch 'b', expected 'x'
mutualdef1.lean:35:0: error: invalid mutually recursive definitions, binder annotation mismatch at parameter 'x'
mutualdef1.lean:47:0: error: invalid mutually recursive definitions, number of parameters mismatch
mutualdef1.lean:59:0: error: invalid mutually recursive definitions, universe parameters mismatch in mutual definition
